@@ -1,3 +1,8 @@
+2006-08-14	blytkerchan
+	* documentation.hpp: add documentation
+	* SubjectTraits.h: ditto
+	* TraversalPolicy.h: ditto
+
 2006-08-13	blytkerchan
 	* SubjectTraits.h: new file
 	* TraversalPolicy.h: ditto
